plugins {
    id 'java'
}

version = '1.0'
java {
    sourceCompatibility = JavaVersion.VERSION_21
    targetCompatibility = JavaVersion.VERSION_21
}

repositories {
    mavenLocal()
    mavenCentral()
}

dependencies {
    implementation 'org.apache.commons:commons-lang3:3.8.1'
    testImplementation 'junit:junit:4.13'
}

jar {
    manifest {
        attributes 'Main-Class': 'com.cynoclast.time.Time'
    }
    archiveBaseName = 'time'
    from { configurations.runtimeClasspath.collect { it.isDirectory() ? it : zipTree(it) } }
}

task deploy(type: Copy) {
    from('build/libs') {
        include 'time-1.0.jar'
    }
    into "${project.properties['deploy.dir']}"
    doLast {
        println "Deployed to: ${project.properties['deploy.dir']}"
    }
}